# QtStudy

./: .gitignore  CMakeLists.txt  CMakeListsBack.txt  CMakeListsNEW.txt  CMakePresets.json  CMakeUserPresets.json  StepByStepFlowChart.pro  componentlistwidget.cpp  componentlistwidget.h  customtextedit.cpp  customtextedit.h  drawingarea.cpp  drawingarea.h  drawingarea_commands.cpp  drawingarea_integr.cpp  drawingarea_undo.cpp  flowchartview.cpp  flowchartview.h  main.cpp  mainwindow.cpp  mainwindow.h  pagesettingdialog.cpp  pagesettingdialog.h  resources.qrc  shape.cpp  shape.h  toolbar.cpp  toolbar.h  云朵形状参考.txt  优化拉线功能-文档.prd  增加功能.prd  增加右键菜单-文档.prd  增加图形-文档.prd  增加连线功能-文档.prd  增加页面设置-文档.prd  开发文档.md  调整字体-文档.prd
chart/: connection.cpp  connection.h  customtextedit.cpp  customtextedit.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h
i18n/: StepByStepFlowChart_zh_CN.ts
shape/: connection.cpp  connection.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h
util/: Utils.cpp  Utils.h  command.cpp  command.h  shapecommands.cpp  shapecommands.h
